# lentacom-bot

./: .env_example  .gitignore  LICENSE  README.md  docker-compose.yml  grafana_dashboard.json
src/: Dockerfile  docker-entrypoint.sh  pyproject.toml
src/app/: alembic.ini  bot.py
src/app/alembic/: env.py
src/app/alembic/versions/: 369cdc4c1358_add_user_info.py  bbe6561db2a9_add_store_and_skus_unique.py  bd9042533eda_init.py
src/app/analytics/: client.py  objects.py
src/app/lenta/: api.py  cache.py  client.py  consts.py  exeptions.py  models.py  utils.py
src/app/lenta/cache/: base.py  memory.py  redis.py
src/app/tgbot/: config.py
src/app/tgbot/callbacks/: profile.py
src/app/tgbot/handlers/: profile.py  sku.py  store.py  user.py
src/app/tgbot/keyboards/: buttons.py  menu.py  sku.py
src/app/tgbot/middlewares/: db.py  lenta.py  logger.py
src/app/tgbot/models/: states.py
src/app/tgbot/services/: __init__.py  db.py  lenta.py  messages.py  profile.py  repository.py  sku.py  store.py  utils.py
